# Intro-to-Neo4j

./: README.md  pyproject.toml
src/api/: genres.py  movie.py  upcoming.py
src/app/: chatbot.py  movie_neo4j.py  prompt.py  tools.py  upload_data.py  vector_store.py
